--- a/SFAdvDev2022/SFAdvDev2022.csproj
+++ b/SFAdvDev2022/SFAdvDev2022.csproj
@@ -1108,8 +1108,11 @@
     <Content Include="Sitefinity\Services\Versioning\HistoryService.svc" />
     <Content Include="Sitefinity\Services\Workflow\WorkflowDefinitionService.svc" />
     <Content Include="Sitefinity\Services\Workflow\WorkflowService.svc" />
+    <Content Include="TestApi.html" />
     <Content Include="Web.config" />
     <Content Include="MVC\Views\Nick\Index.cshtml" />
+    <Content Include="MVC\Views\PageCrud\Index.cshtml" />
+    <Content Include="MVC\Views\NewsCrud\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
@@ -1117,6 +1120,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVC\Controllers\NickController.cs" />
     <Compile Include="MVC\Models\NickModel.cs" />
+    <Compile Include="MVC\Controllers\PageCrudController.cs" />
+    <Compile Include="MVC\Models\PageCrudModel.cs" />
+    <Compile Include="MVC\Controllers\NewsCrudController.cs" />
+    <Compile Include="MVC\Models\NewsCrudModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AdminApp\elements.9d880eeb86f16bf5f136.bundle.js.map" />
@@ -1137,9 +1144,11 @@
     <Content Include="App_Data\RadSpell\en-US.tdf" />
     <Content Include="App_Data\RadSpell\de-DE.tdf" />
     <Content Include="App_Data\GeoLocation\GeoLite2-City.mmdb" />
+    <Content Include="Mvc\Views\NewsCrud\CreatePressRelease.cshtml" />
     <None Include="Mvc\Views\Nick\DesignerView.Simple.cshtml.old" />
     <None Include="Mvc\Views\Nick\DesignerView.Friendly.cshtml.old" />
     <None Include="Mvc\Views\Nick\DesignerView.Simple.json.old" />
+    <Content Include="Mvc\Views\PageCrud\Create.cshtml" />
     <None Include="packages.config" />
     <Content Include="Sitefinity\ExternalLibraries\LibWebP\libwebp_x86.sflib" />
     <Content Include="Sitefinity\ExternalLibraries\LibWebP\libwebp_x64.sflib" />
