--- a/SFAdvDev2022/SFAdvDev2022.csproj
+++ b/SFAdvDev2022/SFAdvDev2022.csproj
@@ -1005,6 +1005,7 @@
     <Content Include="App_Data\RadCaptcha\Z.wav" />
     <Content Include="Default.aspx" />
     <Content Include="extensions.bundle.js" />
+    <Content Include="Global.asax" />
     <Content Include="Mvc\Controllers\readme.txt" />
     <Content Include="Mvc\Models\readme.txt" />
     <Content Include="Mvc\Views\readme.txt" />
@@ -1117,7 +1118,12 @@
   <ItemGroup>
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
     <Compile Include="AzureWebRole.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Localization\MyWidgetResources.cs" />
+    <Compile Include="Mvc\Models\IStevenEvent.cs" />
+    <Compile Include="Mvc\Models\StevenEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVC\Controllers\NickController.cs" />
     <Compile Include="MVC\Models\NickModel.cs" />
