--- a/SFAdvDev2022/App_Data/Sitefinity/Configuration/PagesConfig.config
+++ b/SFAdvDev2022/App_Data/Sitefinity/Configuration/PagesConfig.config
@@ -1,2 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<pagesConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="14.0.7728.0" defaultBackendTemplateId="f669d9a7-009d-4d83-cccc-000000000001" />
+<pagesConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="14.0.7728.0" defaultBackendTemplateId="f669d9a7-009d-4d83-cccc-000000000001">
+	<scriptManager enableCdn="True" />
+</pagesConfig>
