--- a/SFAdvDev2022/App_Data/Sitefinity/Configuration/SystemConfig.config
+++ b/SFAdvDev2022/App_Data/Sitefinity/Configuration/SystemConfig.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <systemConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="14.0.7728.0">
+	<applicationModules>
+		<add startupType="OnApplicationStart" name="Diagnostics" config:flags="1" />
+		<add startupType="Disabled" name="EloquaConnector" config:flags="1" />
+		<add startupType="Disabled" name="Forums" config:flags="1" />
+		<add startupType="Disabled" name="HubSpotConnector" config:flags="1" />
+		<add startupType="Disabled" name="NativeChat" config:flags="1" />
+		<add startupType="Disabled" name="SalesForceConnector" config:flags="1" />
+		<add startupType="Disabled" name="SharepointConnector" config:flags="1" />
+	</applicationModules>
 	<typeImplementationsMapping>
 		<add type="Telerik.Sitefinity.Web.UI.ContentUI.Config.ContentViewDefinitionElement, Telerik.Sitefinity" config:key="3" config:flags="1" />
 		<add type="Telerik.Sitefinity.Web.UI.Fields.Config.FieldDefinitionElement, Telerik.Sitefinity" config:key="4" config:flags="1" />
