.NET Core update

--- a/SFAdvDev2022/App_Data/Sitefinity/Configuration/AuthenticationConfig.config
+++ b/SFAdvDev2022/App_Data/Sitefinity/Configuration/AuthenticationConfig.config
@@ -20,6 +20,11 @@
 	<oauthServer>
 		<authorizedClients>
 			<add secret="secret" clientId="postman" />
+			<add secret="Secret" clientId="sitefinity">
+				<redirectUrls>
+					<add value="http://localhost:3000/auth/oauth/sign-in" />
+				</redirectUrls>
+			</add>
 		</authorizedClients>
 	</oauthServer>
 </authenticationConfig>
