--- a/SFAdvDev2022/App_Data/Sitefinity/Configuration/WebServicesConfig.config
+++ b/SFAdvDev2022/App_Data/Sitefinity/Configuration/WebServicesConfig.config
@@ -3,7 +3,7 @@
 	<Routes>
 		<add name="Frontend" config:flags="1">
 			<services>
-				<add autogenerateTypes="False" urlName="default" config:flags="1">
+				<add access="Anonymous" autogenerateTypes="False" urlName="default" config:flags="1">
 					<types>
 						<add urlName="sites" clrType="Telerik.Sitefinity.Multisite.Model.Site" />
 						<add urlName="newsitems" clrType="Telerik.Sitefinity.News.Model.NewsItem" type:this="Telerik.Sitefinity.Web.Api.Configuration.LifecycleTypeSettings, Telerik.Sitefinity.Web.Api">
@@ -19,6 +19,17 @@
 								<remove Name="Content" />
 								<remove Name="SourceName" />
 								<remove Name="SourceSite" />
+								<add PersistentName="SourceSite" Name="SourceSite" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="SourceName" Name="SourceName" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="Content" Name="Content" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add ResolverType="Telerik.Sitefinity.Services.Comments.CommentProperty" SelectedByDefault="False" Name="Comments" type:this="Telerik.Sitefinity.Web.Api.Configuration.CalculatedPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="AllowComments" AllowFilter="False" AllowSort="False" Name="AllowComments" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="ItemDefaultUrl" AllowFilter="False" AllowSort="False" ReadOnly="True" Name="ItemDefaultUrl" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="IncludeInSitemap" AllowFilter="False" AllowSort="False" Name="IncludeInSitemap" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="DateCreated" ReadOnly="True" Name="DateCreated" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="PublicationDate" Name="PublicationDate" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add ResolverType="Telerik.Sitefinity.Web.Services.Extensibility.ProviderNameProperty" Name="Provider" type:this="Telerik.Sitefinity.Web.Api.Configuration.CalculatedPropertyMapping, Telerik.Sitefinity.Web.Api" />
+								<add PersistentName="LastModified" ReadOnly="True" Name="LastModified" type:this="Telerik.Sitefinity.Web.Api.Configuration.PersistentPropertyMapping, Telerik.Sitefinity.Web.Api" />
 							</propertyMappings>
 						</add>
 						<add urlName="blogs" clrType="Telerik.Sitefinity.Blogs.Model.Blog" />
@@ -51,6 +62,11 @@
 						<add urlName="pages" clrType="Telerik.Sitefinity.Pages.Model.PageNode" />
 					</types>
 				</add>
+			</services>
+		</add>
+		<add name="Sitefinity" config:flags="1">
+			<services>
+				<add accessControlAllowOrigin="http://localhost:3000" urlName="system" config:flags="1" />
 			</services>
 		</add>
 	</Routes>
